# Apps

./: .gitignore  .mcp.json  .shardmindignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  install-skills.sh  skills-lock.json  vault-manifest.json
notebooklm/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
notebooklm/src/: main.py
scientific-agent-skills/: CLAUDE.md  README.md  pyproject.toml  setup.sh
scientific-agent-skills/.claude/skills/biopython/: SKILL.md
scientific-agent-skills/.claude/skills/bulk-rnaseq/: SKILL.md
scientific-agent-skills/.claude/skills/citation-management/: SKILL.md
scientific-agent-skills/.claude/skills/clinical-decision-support/: SKILL.md
scientific-agent-skills/.claude/skills/database-lookup/: SKILL.md
scientific-agent-skills/.claude/skills/database-lookup/references/: biology-genomics.md  (+7 more)
scientific-agent-skills/.claude/skills/datamol/: SKILL.md
scientific-agent-skills/.claude/skills/deepchem/: SKILL.md
scientific-agent-skills/.claude/skills/exa-search/: SKILL.md
scientific-agent-skills/.claude/skills/experiment-tracking/: SKILL.md
scientific-agent-skills/.claude/skills/experimental-design/: SKILL.md
scientific-agent-skills/.claude/skills/exploratory-data-analysis/: SKILL.md
scientific-agent-skills/.claude/skills/gget/: SKILL.md
scientific-agent-skills/.claude/skills/hypothesis-generation/: SKILL.md
scientific-agent-skills/.claude/skills/infographics/: SKILL.md
scientific-agent-skills/.claude/skills/latex-posters/: SKILL.md
scientific-agent-skills/.claude/skills/literature-review/: SKILL.md
scientific-agent-skills/.claude/skills/matplotlib/: SKILL.md
scientific-agent-skills/.claude/skills/molecular-dynamics/: SKILL.md
scientific-agent-skills/.claude/skills/networkx/: SKILL.md
scientific-agent-skills/.claude/skills/paper-lookup/: SKILL.md
scientific-agent-skills/.claude/skills/parallel-web/: SKILL.md
scientific-agent-skills/.claude/skills/pathway-enrichment/: SKILL.md
scientific-agent-skills/.claude/skills/peer-review/: SKILL.md
scientific-agent-skills/.claude/skills/polars/: SKILL.md
scientific-agent-skills/.claude/skills/pyhealth/: SKILL.md
scientific-agent-skills/.claude/skills/research-code/: SKILL.md
scientific-agent-skills/.claude/skills/statistical-power/: SKILL.md
scientific-agent-skills/.claude/skills/web-lookup/: SKILL.md
scientific-agent-skills/skills/citation-management/: SKILL.md
scientific-agent-skills/skills/citation-management/references/: citation_validation.md
scientific-agent-skills/skills/experiment-tracking/: SKILL.md
scientific-agent-skills/skills/paper-lookup/: SKILL.md
scientific-agent-skills/skills/research-code/: SKILL.md
scientific-agent-skills/skills/statistical-power/: SKILL.md
scientific-agent-skills/skills/statistical-power/scripts/: power_analysis.py
scientific-agent-skills/skills/web-lookup/: SKILL.md
(+241 files in other folders)
