[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebooklm-app"
version = "0.1.0"
description = "NotebookLM automation app using the notebooklm-py library"
requires-python = ">=3.10"
dependencies = [
    "notebooklm-py[browser]>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
notebooklm-app = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
