[project]
name = "notebooklm"
version = "0.1.0"
description = "Google NotebookLM automation client using notebooklm-py"
requires-python = ">=3.10"
dependencies = [
    "notebooklm-py[browser]>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
