[project]
name = "scientific-agent-skills"
version = "1.0.0"
description = "Claude Code skills for scientific research workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "K-Dense, Inc.", email = "" },
]

[project.optional-dependencies]
literature = [
    "requests>=2.31.0",
    "biopython>=1.83",
]
bioinformatics = [
    "biopython>=1.83",
    "gget>=0.28.0",
    "pydeseq2>=0.4.0",
    "gseapy>=1.1.0",
]
chemistry = [
    "datamol>=0.12.0",
    "rdkit>=2023.9.0",
    "deepchem>=2.7.0",
    "molfeat>=0.9.0",
]
simulation = [
    "openmm>=8.0.0",
    "mdanalysis>=2.7.0",
    "pdbfixer>=1.9",
]
data = [
    "polars>=0.20.0",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "networkx>=3.2.0",
]
clinical = [
    "pyhealth>=1.1.5",
    "torch>=2.0.0",
]
search = [
    "exa-py>=1.0.0",
]
all = [
    "scientific-agent-skills[literature,bioinformatics,chemistry,simulation,data,clinical,search]",
]

[tool.ruff]
line-length = 100
target-version = "py310"
